--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android Practice</string>
+    <string name="received_broadcast_data">Received Broadcast Data: %s</string>
+    <string name="elapsed_time">Elapsed Time: %s</string>
 </resources>
